Day2/create-azure-vm-using-terraform/main.tf
terraform {
  required_providers {
    azurerm = {
      source = "hashicorp/azurerm"
      version = "3.33.0"
    }

    tls = {
      source = "hashicorp/tls"
      version = "4.0.4"
    }
  }
}

provider "azurerm" {
   features {}
}

variable "resource_group_location" {
    description = "Location of resource group"
    default = "eastus"
}

variable "resource_group_name_prefix" {
    description = "Prefix of resource group"
    default = "tektutor"
}

variable "generated_key_name" {
    description = "Key-pair generated by Terraform"
    type = string
    default = "my-key-pair"
}

resource "azurerm_resource_group" "rg" {
    location = var.resource_group_location
    name = "tektutor-resource-group" 
}

resource "azurerm_virtual_network" "my_virtual_network" {
    location = var.resource_group_location
    resource_group_name = azurerm_resource_group.rg.name

    name = "my-virtual-net"
    address_space = ["10.0.0.0/16"]
}

resource "azurerm_subnet" "my_subnet" {
    resource_group_name = azurerm_resource_group.rg.name

    name = "my_subnet"
    virtual_network_name = azurerm_virtual_network.my_virtual_network.name
    address_prefixes = ["10.0.1.0/24"]
}

resource "azurerm_public_ip" "my_public_ip" {
    name = "my_public_ip"
    location = var.resource_group_location
    resource_group_name = azurerm_resource_group.rg.name
    allocation_method = "Dynamic"
}

resource "azurerm_network_security_group" "my_nsg" {
    location = var.resource_group_location
    resource_group_name = azurerm_resource_group.rg.name

    name = "my_nsg"

    security_rule {
        name ="AllowSSH"
        priority = "1001"
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "22"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name ="AllowICMP"
        priority = "1002"
        direction = "Inbound"
        access = "Allow"
        protocol = "Icmp"
        source_port_range = "*"
        destination_port_range = "*"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name ="AllowHttp"
        priority = "1003"
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "80"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }
}

resource "azurerm_network_interface" "my_nic" {
    name = "my_nic"
    location = var.resource_group_location
    resource_group_name = azurerm_resource_group.rg.name

    ip_configuration {
        name = "my_nic_configuration"
        subnet_id = azurerm_subnet.my_subnet.id
        private_ip_address_allocation = "Dynamic"
        public_ip_address_id = azurerm_public_ip.my_public_ip.id 
    }
}

resource "azurerm_network_interface_security_group_association" "nic_nsg_connector" {
    network_interface_id = azurerm_network_interface.my_nic.id
    network_security_group_id = azurerm_network_security_group.my_nsg.id
}

resource "tls_private_key" "my_ssh_key" {
    algorithm = "RSA"
    rsa_bits = 4096
}

resource "azurerm_linux_virtual_machine" "my_ubuntu_vm" {
    name = "my_ubuntu_vm"

    location = var.resource_group_location
    resource_group_name = azurerm_resource_group.rg.name

    network_interface_ids = [ azurerm_network_interface.my_nic.id ]
    size = "Standard_DS1_V2"

    os_disk {
        name = "my_harddisk"
        caching = "ReadWrite"
        storage_account_type = "Premium_LRS"
    }

    source_image_reference {
        publisher = "Canonical"
        offer = "UbuntuServer"
        sku = "18.04-LTS"
        version = "latest"
    }

    computer_name = "myvm"
    admin_username = "azureuser"
    disable_password_authentication = true

    admin_ssh_key {
        username = "azureuser"
        public_key = tls_private_key.my_ssh_key.public_key_openssh 
    }
}

output "public_ip_address" {
    value = azurerm_linux_virtual_machine.my_ubuntu_vm.public_ip_address
}

output "ssh_key" {
    value = tls_private_key.my_ssh_key.private_key_pem
    sensitive = true
}
